# agent-runtime

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: security-audit-2026-06-20.md
docs/superpowers/plans/: 2026-06-25-compaction-engine.md
src/agent_runtime/: __init__.py  protocol.py
src/agent_runtime/connectors/: __init__.py  base.py
src/agent_runtime/context/: __init__.py  execution_context.py
src/agent_runtime/flows/: __init__.py  message_router.py
src/agent_runtime/llm/: __init__.py  client.py  compaction.py  errors.py  factory.py  models.py  tool_loop.py
src/agent_runtime/logging/: __init__.py  protocol.py
src/agent_runtime/observability/: __init__.py  envelope.py  middleware.py  request_context.py
src/agent_runtime/resilience/: __init__.py  circuit_breaker.py
src/agent_runtime/safety/: __init__.py  data_masker.py  injection_detector.py  prompt_sanitizer.py
src/agent_runtime/session/: __init__.py  events.py  extras.py  manager.py  models.py  protocol.py  testing.py
src/agent_runtime/transport/: __init__.py
src/agent_runtime/transport/teams/: __init__.py  adapter.py  events.py  identity.py  outbound.py  protocol.py  testing.py
tests/session/: test_events.py  test_manager_create.py  test_manager_durable.py  test_manager_get_or_prompt_resume.py  test_manager_resume.py  test_manager_update.py  test_models.py  test_protocol_conformance.py
tests/transport/teams/: test_adapter.py  test_events.py  test_fake_outbound.py  test_handler_dispatch.py  test_identity.py  test_outbound.py  test_proactive.py
tests/unit/: test_circuit_breaker.py  test_data_masker.py  test_execution_context.py  test_injection_detector.py  test_message_router.py  test_prompt_sanitizer.py  test_protocol.py  test_version.py
tests/unit/connectors/: test_base.py
tests/unit/llm/: conftest.py  fakes.py  test_client.py  test_compaction.py  test_factory.py  test_tool_loop.py
tests/unit/observability/: conftest.py  test_envelope.py  test_middleware.py  test_request_context.py
