[project]
name = "agent-runtime"
version = "0.1.0"
description = "Shared runtime primitives for Microsoft Teams knowledge bots — resilience, safety, session flows, execution context. Consumed by teams-bot-platform and ithelpdesk."
readme = "README.md"
license = "MIT"
authors = [{ name = "simonthan", email = "simon.than@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff>=0.6", "ty>=0.0.1a5"]
test = ["pytest>=8", "pytest-cov>=5"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "ANN401"]

# Per-file ignores carry the verbatim-lift contract: lifted ihd code keeps its
# style. Cleanups happen via ihd-side stubs (T-506-batch etc.) and propagate
# back here on the next agent_runtime version. Without these, `make lint` would
# block on ihd's existing style choices that T-002 explicitly does not refactor.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN", "D", "TRY", "EM", "B", "PT017"]
"src/agent_runtime/safety/injection_detector.py" = [
    "RUF012",  # mutable class default (PATTERNS dict; ihd/T-506-batch covers fix)
    "C901",    # too-complex (DETECTION_PATTERNS table lookup)
    "PLR0912", # too-many-branches (detection scan loop)
    "PLR0915", # too-many-statements
]
"src/agent_runtime/flows/message_router.py" = [
    "TRY003",  # raise vanilla RuntimeError with long message (intentional surface)
    "EM102",   # f-string in raise (paired with TRY003 — ihd style)
]
"src/agent_runtime/resilience/circuit_breaker.py" = [
    "G004",    # logging f-string (lifted ihd pattern — matches existing audit calls)
]

[tool.pytest.ini_options]
addopts = [
    "--cov=agent_runtime",
    "--cov-report=term-missing",
    "--cov-fail-under=0",  # ratchet up as modules become concrete
]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = false  # flip to true once modules are concrete

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
