[project]
name = "agent-runtime"
version = "0.6.1"
description = "Shared runtime primitives for Microsoft Teams knowledge bots — resilience, safety, session flows, execution context. Consumed by teams-bot-platform and ithelpdesk."
readme = "README.md"
license = "MIT"
authors = [{ name = "simonthan", email = "simon.than@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6,<3",
    "tenacity>=8.2",
]

[project.optional-dependencies]
llm = ["anthropic>=0.42,<1.0"]
teams = [
    "botbuilder-core>=4.15,<5",
    "botbuilder-schema>=4.15,<5",
    "aiohttp>=3.9,<4",
]
redis = ["redis>=5,<6"]
postgres = ["asyncpg>=0.29,<1"]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff>=0.6", "ty>=0.0.1a5"]
test = ["pytest>=8", "pytest-cov>=5", "pytest-asyncio>=0.23"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "ANN401"]

# Per-file ignores carry the verbatim-lift contract: lifted ihd code keeps its
# style. Cleanups happen via ihd-side stubs (T-506-batch etc.) and propagate
# back here on the next agent_runtime version. Without these, `make lint` would
# block on ihd's existing style choices that T-002 explicitly does not refactor.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "PLR0913", "ANN", "D", "TRY", "EM", "B", "PT017", "PT018", "PLC0415", "SLF001", "PT011", "F401", "E501", "ARG002", "C901", "RUF059", "FBT002", "ERA001", "RUF015", "I001", "S106", "F811"]
"src/agent_runtime/llm/client.py" = [
    "PLR0913", # complete() has 8 keyword-only params by design — opinionated API surface
    "EM101",   # LLMResponseError("literal msg") — short diagnostic strings, not user-facing
    "EM102",   # f-string in raise — PII-safe pattern: type+status only, no SDK body
    "TRY003",  # long message outside exception class — each raise is a distinct diagnostic
]
"src/agent_runtime/llm/tool_loop.py" = [
    "PLR0913", # ToolUseLoop.run has 11 keyword-only params by design — same exemption as client.py
    "TC001",   # AnthropicClient used at runtime (constructor param type) — not annotation-only
    "TC003",   # Callable/Awaitable from collections.abc used at runtime in ToolExecutor alias
]
"src/agent_runtime/safety/injection_detector.py" = [
    "RUF012",  # mutable class default (PATTERNS dict; ihd/T-506-batch covers fix)
    "C901",    # too-complex (DETECTION_PATTERNS table lookup)
    "PLR0912", # too-many-branches (detection scan loop)
    "PLR0915", # too-many-statements
    "ANN204",  # missing return type on __init__ (ihd style)
    "PLR2004", # magic value comparisons (ihd style — confidence thresholds)
    "SIM102",  # nested if statements (ihd style)
    "RUF010",  # str() in f-string (ihd style)
    "RUF022",  # __all__ sort order (ihd style)
]
"src/agent_runtime/flows/message_router.py" = [
    "TRY003",  # raise vanilla RuntimeError with long message (intentional surface)
    "EM102",   # f-string in raise (paired with TRY003 — ihd style)
    "TC001",   # import not in TYPE_CHECKING block (ihd style)
    "ANN204",  # missing return type on __init__ (ihd style)
    "RUF022",  # __all__ sort order (ihd style)
]
"src/agent_runtime/connectors/base.py" = [
    "PLR0913",  # _ConnectorThrottle.__init__ + register_rate_limit have config-pair signatures
    "G004",     # f-strings in logger calls (lifted style — fix on next agent_runtime cleanup)
    "BLE001",   # broad except in _execute_with_retry — intentional, matches circuit_breaker pattern
    "SLF001",   # tests reach into _default_audit / _rate_limit_config / _throttle_registry
    "ANN204",   # missing return type on __init__ (ihd style)
    "ANN202",   # missing return type on private async generator (ihd style)
    "ANN205",   # missing return type on staticmethod (ihd style)
    "ANN001",   # missing type annotation args (ihd style)
    "ANN002",   # missing type annotation for *args (ihd style)
    "ANN003",   # missing type annotation for **kwargs (ihd style)
    "SIM103",   # return condition directly — preserves ihd's explicit branching with comments
    "PIE790",   # unnecessary pass in abstract methods (ihd style for ABC)
    "E501",     # line too long in retry log messages (ihd style — log messages are descriptive)
]
"src/agent_runtime/protocol.py" = [
    "PLR0913",  # NodeHandler.handle / NodeExecutor.execute_node have 6+ params by design
    "E501",     # docstring line too long (verbatim lift — ihd style)
]
"src/agent_runtime/resilience/circuit_breaker.py" = [
    "G004",    # logging f-string (lifted ihd pattern — matches existing audit calls)
    "ANN204",  # missing return type on __init__ (ihd style)
    "ANN001",  # missing type annotation on __aexit__ args (ihd style)
    "BLE001",  # blind except Exception (ihd style — preserves callback isolation)
    "SIM102",  # nested if statements (ihd style)
    "PYI034",  # __aenter__ return type (ihd style)
    "RUF022",  # __all__ sort order (ihd style)
]
"src/agent_runtime/context/execution_context.py" = [
    "ANN204",  # missing return type on __init__ (ihd style)
]
"src/agent_runtime/session/protocol.py" = [
    "FBT001",   # RedisClientProtocol.set — nx/xx are boolean positional args mirroring redis-py's API contract; changing to keyword-only would break structural conformance
    "FBT002",   # same as FBT001 — boolean default matches redis-py signature exactly
    "PLR0913",  # RedisClientProtocol.set (6 args) and SessionRepositoryProtocol.upsert_resume_data (7 args) — opinionated multi-param APIs matching their concrete counterparts
]
"src/agent_runtime/session/manager.py" = [
    "PLR0913",  # _persist_resume_to_db forwards all create_session args to repo (session_id, user_id, bot_id, resume_token, resume_expires_at, client_context, channel) — lift-required signature; cannot reduce without losing the v0.5.0 bot_id key contract
]
"src/agent_runtime/session/testing.py" = [
    "FBT001",   # FakeRedisClient.set — nx/xx mirror RedisClientProtocol boolean flags; must match to structurally satisfy the Protocol
    "FBT002",   # same as FBT001 — boolean defaults match redis-py/Protocol signature exactly
    "PLR0913",  # FakeRedisClient.set and FakeSessionRepository.upsert_resume_data mirror their Protocol counterparts' arg counts
]

[tool.pytest.ini_options]
addopts = [
    "--cov=agent_runtime",
    "--cov-report=term-missing",
    "--cov-fail-under=0",  # ratchet up as modules become concrete
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = false  # flip to true once modules are concrete

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

